<resources>
    <string name="app_name">Новини 240</string>
    <string name="i_c_d">_???_</string>

    <string name="tab_name">Стрічка новин</string>
    <string name="tab_settings">Мій кабінет</string>
    <string name="tab_info">Інформація</string>
    <string name="tab_create">Створення поста</string>
    <string name="tab_cheat"># Шпоры</string>

    <string name="copy_button">Копіювати шаблон</string>
    <string name="apply_button">Застосувати</string>
    <string name="update_button">Оновити додаток</string>
    <string name="up_url_button">Копіювати ссилку</string>

    <string name="hint_input_title">Зоголовок поста</string>
    <string name="hint_input_text">Текст поста</string>
    <string name="hint_input_mode_code">Введіть код</string>

    <string name="info">
    Вся інформація про програму:
\n\n
    Цей додаток створено Б. Ратміром Мірошниченко, на даний момент - учнем 10в класу.
\n\n
    Дякую що встановили цей додаток, теперь Ви можете слідкувати за новинами нашої школи!
\n\n
    Я думаю, інтерфейс інтуїтивно зрозумілий, так що пояснювати дрібні деталі не бачу сенсу, Ви повинні будете розібратися.
\n\n
    У додатку є кілька типів постів:\n
    • Сірий - системний\n
    • Синій - тихий\n
    • Зелений - звичайний\n
    • Червоний - терміновий
\n\n
    Тип поста ні на що не впливає крім як швидкої класифікації поста для користувача. Простіше кажучи - що б Вам було зручніше.
\n\n
    Додаток створено під керівництвом Олега Н. - нового президента школи.
\n\n
    До речі, все що Ви тут бачите зроблено вручну єдиним розробником. 
    Бачите, головне - дати хороший стимул і бажання, і навіть такі як можуть зробити щось дотепне!
\n\n
    Гарного навчання та просто - удачі!</string>

    <string name="create">
    Тут Ви можете створити шаблон поста.
\n\n
    Ви не можете самостійно публікувати пости, це привілей керуючих,
    щоб уникнути перенавантажень та іншого непотребства.
    (Лол, я не очікував що буду використовувати цензуру!)
\n\n
    Даний шаблон можна передати керуючим (Н. Олег, М. Ратмір)
    для подальшої перевірки та публікації, можливо, з редагуванням.</string>

    <string name="update">
    Поточна версія (%vSec%) відрізняется вшд серверної (%vNew%)
\n\n
    Будь ласка, натисніть на кнопку в нижній частині сторінки щоб оновити цей додаток.
\n\n
    Якщо програма не оновлюється, скопіюйте посилання та спробуйте оновити самостійно.
\n\n
    Додатком можно користуватись не оновлюючи, проте це може привести до помилок і збоїв, дякую!
\n\n\n
     - Про версію %vNew%:
\n\n
    %vInf%</string>

    <string name="menu">Ви знаходитесь в меню\n\nВиберіть один з пунктів, або натисніть на екран</string>

</resources>
